# tower-defense-with-friends

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  Trunk.toml  index.html  justfile  patch_module_bindings.sh  towers.toml  units.toml  waves.toml
assets/: map.tmx
bevy_spacetimedb/: Cargo.toml
bevy_spacetimedb/src/: aliases.rs  channel_receiver.rs  lib.rs  messages.rs  plugin.rs  procedures.rs  reducers.rs  stdb_connection.rs  tables.rs
spacetimedb/: Cargo.toml
spacetimedb/src/: lib.rs
spacetimedb/src/agents/: cleanup_agent.rs  enemy_movement_agent.rs  mod.rs  projectile_agent.rs  tower_attack_agent.rs  wave_spawner_agent.rs  worker_agent.rs
spacetimedb/src/entities/: mod.rs  user.rs
spacetimedb/src/helpers/: auth.rs  mod.rs  validation.rs
spacetimedb/src/reducers/: chat.rs  mod.rs  tower_actions.rs  user_actions.rs  wave_actions.rs  worker_actions.rs
spacetimedb/src/tables/: components.rs  game_entity.rs  game_state.rs  message.rs  mod.rs  user.rs  wave.rs  worker.rs
src/: animation.rs  auth.rs  bevy.rs  bevy_demo.rs  bevy_plugin.rs  components.rs  config.rs  constants.rs  debug.rs  events.rs  main.rs  map.rs  resources.rs  tower_manager.rs  tui.rs  wasm_tilemap.rs  wave_manager.rs
src/module_bindings/: mod.rs  my_user_table.rs
src/systems/: audio.rs  camera.rs  color_select.rs  cursor.rs  enemy.rs  entity_sync.rs  fog.rs  game_state.rs  menu.rs  mod.rs  networking.rs  player_list.rs  projectile.rs  recruit.rs  settings.rs  setup.rs  top_bar.rs  tower.rs  ui.rs  wave_manager_ui.rs  worker.rs
