[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[workspace]
exclude = ["spacetimedb"]

[[bin]]
name = "bevy-demo"
path = "src/bevy_demo.rs"
required-features = ["bevy-demo"]

[[bin]]
name = "wave-manager"
path = "src/wave_manager.rs"

[[bin]]
name = "tower-manager"
path = "src/tower_manager.rs"

[dependencies]
ratatui = "0.30.0"
ratatui-image = "10.0.2"
image = "0.25.9"
crossterm = "0.29.0"
dioxus-devtools = { version = "0.7", optional = true }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Bevy demo dependencies
bevy = { version = "0.17", optional = true }
bevy_spacetimedb = { version = "0.7.2", optional = true }
spacetimedb-sdk = { version = "1.11", optional = true }
bevy_ecs_tiled = "0.10.0"
notify = { version = "7.0", optional = true }

# Auth dependencies
tiny_http = { version = "0.12", optional = true }
open = { version = "5", optional = true }
url = { version = "2", optional = true }
log = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
ureq = { version = "2", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
devtools = ["dioxus-devtools"]
bevy-demo = ["bevy", "bevy_spacetimedb", "spacetimedb-sdk", "dioxus-devtools", "notify", "tiny_http", "open", "url", "log", "sha2", "base64", "rand", "ureq", "serde_json"]
bevy-hotpatch = ["bevy-demo", "bevy/hotpatching"]
