[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[workspace]
exclude = ["spacetimedb"]

[[bin]]
name = "game"
path = "src/main.rs"
# Requires either bevy-demo (native) or bevy-wasm (web)

[[bin]]
name = "wave-manager"
path = "src/wave_manager.rs"

[[bin]]
name = "tower-manager"
path = "src/tower_manager.rs"

[dependencies]
ratatui = { version = "0.30.0", optional = true }
ratatui-image = { version = "10.0.2", optional = true }
image = "0.25.9"
crossterm = { version = "0.29.0", optional = true }
dioxus-devtools = { version = "0.7", optional = true }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

# Bevy demo dependencies
bevy = { version = "0.17", optional = true, default-features = false, features = [
    "std", "bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_gilrs", "bevy_gizmos",
    "bevy_input_focus", "bevy_log", "bevy_mesh_picking_backend", "bevy_pbr", "bevy_picking",
    "bevy_render", "bevy_sprite", "bevy_sprite_picking_backend", "bevy_state", "bevy_text",
    "bevy_ui", "bevy_ui_picking_backend", "bevy_winit", "default_font", "hdr", "multi_threaded",
    "png", "smaa_luts", "sysinfo_plugin", "tonemapping_luts", "vorbis", "webgl2", "x11"
] }
bevy_kira_audio = { version = "0.24", optional = true, features = ["mp3", "ogg", "wav"] }
# Local vendored copy with WASM fixes
bevy_spacetimedb = { path = "bevy_spacetimedb", optional = true }
spacetimedb-sdk = { git = "https://github.com/kistz/SpacetimeDB", branch = "rust-web-sdk-updated", features = ["web"], optional = true, default-features = false }
# bevy_ecs_tiled - made optional because it pulls in zstd (C library) which doesn't compile to WASM
bevy_ecs_tiled = { version = "0.10.0", default-features = false, features = ["render", "png"], optional = true }
tiled = { version = "0.15", default-features = false, optional = true }

# WASM: Enable js feature for getrandom to use browser crypto API
getrandom = { version = "0.2", features = ["js"], optional = true }
# WASM: For spawning async tasks in module_bindings
wasm-bindgen-futures = { version = "0.4", optional = true }
notify = { version = "7.0", optional = true }

# Auth dependencies
tiny_http = { version = "0.12", optional = true }
open = { version = "5", optional = true }
url = { version = "2", optional = true }
log = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
ureq = { version = "2", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
devtools = ["dioxus-devtools"]
bevy-demo = ["bevy", "bevy_kira_audio", "bevy_spacetimedb", "spacetimedb-sdk", "dioxus-devtools", "notify", "tiny_http", "open", "url", "log", "sha2", "base64", "rand", "ureq", "serde_json", "ratatui", "ratatui-image", "crossterm", "bevy_ecs_tiled", "tiled"]
bevy-hotpatch = ["bevy-demo", "bevy/hotpatching"]
# WASM build - excludes native-only deps (notify, tiny_http, open, ureq), uses WASM-compatible bevy_spacetimedb fork
bevy-wasm = ["bevy", "bevy_kira_audio", "bevy_spacetimedb", "spacetimedb-sdk", "url", "log", "sha2", "base64", "rand", "serde_json", "getrandom", "wasm-bindgen-futures", "tiled"]

# Patches for WASM compatibility
[patch.crates-io]
# Use WASM-compatible spacetimedb-sdk fork for all dependents (including bevy_spacetimedb)
spacetimedb-sdk = { git = "https://github.com/kistz/SpacetimeDB", branch = "rust-web-sdk-updated" }

