[package]
name = "bevy_spacetimedb"
version = "0.7.2"
edition = "2024"

[features]
default = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
spacetimedb-sdk = { version = "1.11.3", git = "https://github.com/kistz/SpacetimeDB.git", branch = "rust-web-sdk-updated", features = ["web"] }
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"

[dependencies]
spacetimedb-sdk = { version = "1.11.3", git = "https://github.com/kistz/SpacetimeDB.git", branch = "rust-web-sdk-updated" }
bevy = "0.17"
