[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "1.8.0" }
log.version = "0.4.17"
spacetime_engine = { path = "../../spacetime_engine" }
serde_json = "1.0.145"
serde = "1.0.228"
