[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.11.1"
log = "0.4"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
